@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-WebGUI
 
+        Replaced debug called with new TRACE() call
+
+
 0.01    Date/time
         First version, released on an unsuspecting world.
 
